spacing fix?

--- a/css/style.css
+++ b/css/style.css
@@ -502,7 +502,7 @@ height:100%;
 }
 #mobilemenu{
   display:block;
-  margin-left:10%;
+  margin-left:18%;
 }
 
 @media screen and (max-width: 1500px) {
